test/expected/explain_udl_c_i-c.out
explain int operator"" _x(char)
        ^
9: warning: "operator" is a keyword in C++98
explain int operator"" _x(char)
                    ^
21: syntax error: """": unexpected token
declare operator as int
